fix(per-protocol-dlq): close the final review's six gaps before merge
- ArchiveJobE2ETest now asserts invalid_events.log_type == "conn", proving
  the topic-to-LogType binding reaches ClickHouse through the real job
  graph; nothing else on this branch runs a map function against it.
- DdlDirectoryTest's 001_ immutability guard is a SHA-256 content pin
  instead of a single literal substring that a conventionally-spaced edit
  would slip past; ordering is asserted against an explicitly-built
  expected list rather than the implementation's own sort.
- Corrected three comments that described 001_'s idempotency reason
  (CREATE ... IF NOT EXISTS) after 002_ added an ALTER ... ADD COLUMN
  IF NOT EXISTS, and SchemaDriftTest's now-inaccurate "one file" wording.
- Clarified ArchiveJob's LogTypeChain doc comment so it reads as a
  distinction (literal uids vs. dlqChain's regular per-protocol
  generation) rather than a standing contradiction.
- Added SourceVersionContractTest: for every LogType, the contract file
  its derived source_version implies must exist on disk.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01K5JdtjAiVR8wZAUScBDoUB